--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,11 @@
             <artifactId>aws-lambda-java-events</artifactId>
             <version>2.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>javax.ws.rs-api</artifactId>
+            <version>2.1</version>
+        </dependency>
         <!-- BEGIN Optional dependencies -->
         <dependency>
             <groupId>commons-fileupload</groupId>
